@@ -2,6 +2,12 @@
 
 # if defined(GC_DARWIN_THREADS)
 
+#include "mono/utils/mono-compiler.h"
+
+#ifdef MONO_DEBUGGER_SUPPORTED
+#include "include/libgc-mono-debugger.h"
+#endif
+
 /* From "Inside Mac OS X - Mach-O Runtime Architecture" published by Apple
    Page 49:
    "The space beneath the stack pointer, where a new stack frame would normally
@@ -681,5 +687,18 @@ void GC_darwin_register_mach_handler_thread(mach_port_t thread) {
   GC_mach_handler_thread = thread;
   GC_use_mach_handler_thread = 1;
 }
+
+#ifdef MONO_DEBUGGER_SUPPORTED
+GCThreadFunctions *gc_thread_vtable = NULL;
+
+void *
+GC_mono_debugger_get_stack_ptr (void)
+{
+	GC_thread me;
+
+	me = GC_lookup_thread (pthread_self ());
+	return &me->stop_info.stack_ptr;
+}
+#endif
 
 #endif
