@@ -1,3 +1,11 @@
+2009-07-02  jonas echterhoff <jonas@unity3d.com>
+	
+	* darwin_stop_world.c: make debugger code compile on 
+	OS X.
+	
+	* pthread_support.c: give mach ports to the debugger instead of pthreads,
+	as those can be iterated over from another executable.
+
 2009-06-22  Neale Ferguson <neale@sinenomine.net>
 
 	* include/private/gc_locks.h: Fix typo in 390 version of GC_compare_and_exchange
